--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,9 +66,28 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-22.04
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/v')
     needs: publish-component
 
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+
     steps:
-      - name: Make release
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Generate docs
+        run: pip install pipenv && make docs
+
+      - name: Upload docs
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: site/
+
+      - name: Publish docs
+        uses: actions/deploy-pages@v2
+
+      - name: Create release
         uses: softprops/action-gh-release@v1
