--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,7 +70,7 @@ jobs:
     needs: publish-component
 
     permissions:
-      contents: read
+      contents: write
       pages: write
       id-token: write
 
