added templates for nats and systems

--- a/libs/core/api/crds/k8s.kubefox.io_platforms.yaml
+++ b/libs/core/api/crds/k8s.kubefox.io_platforms.yaml
@@ -36,6 +36,8 @@ spec:
               systems:
                 additionalProperties:
                   properties:
+                    containerRegistry:
+                      type: string
                     imagePullSecret:
                       type: string
                   type: object
