--- a/components/operator/templates/system/namespace.yaml
+++ b/components/operator/templates/system/namespace.yaml
@@ -1,10 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  names: {{ .System.Namespace }}
+  name: {{ .System.Namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
-  {{- with .Owner }}
-  ownerReferences:
-    - {{- . | toYaml | nindent 6 }}
-  {{- end }}
