--- a/components/operator/templates/broker/clusterrolebinding-auth.yaml
+++ b/components/operator/templates/broker/clusterrolebinding-auth.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "labels" . | nindent 4 }}
   {{- with .Owner }}
   ownerReferences:
-    - {{- . | toYaml | nindent 6 }}
+    {{- . | toYaml | nindent 4 }}
   {{- end }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
