--- a/components/operator/templates/platform/configmap-root-ca.yaml
+++ b/components/operator/templates/platform/configmap-root-ca.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name:  {{ instanceName }}-root-ca
+  name:  {{ .Instance.Name }}-root-ca
   namespace: {{ namespace }}
   labels:
     app.kubernetes.io/instance: {{ .Instance.Name }}
@@ -9,7 +9,7 @@ metadata:
     kubefox.xigxog.io/platform: {{ .Platform.Name }}
   {{- with .Owner }}
   ownerReferences:
-    - {{- . | toYaml | nindent 6 }}
+    {{- . | toYaml | nindent 4 }}
   {{- end }}
 data:
   ca.crt: |
