--- a/components/operator/templates/vault/entrypoint-configmap.yaml
+++ b/components/operator/templates/vault/entrypoint-configmap.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "labels" . | nindent 4 }}
   {{- with .Owner }}
   ownerReferences:
-    - {{- . | toYaml | nindent 6 }}
+    {{- . | toYaml | nindent 4 }}
   {{- end }}
 data:
   entrypoint.sh: |
