--- a/libs/core/api/crds/kubefox.xigxog.io_platforms.yaml
+++ b/libs/core/api/crds/kubefox.xigxog.io_platforms.yaml
@@ -36,6 +36,11 @@ spec:
             type: object
           status:
             description: PlatformStatus defines the observed state of Platform
+            properties:
+              ready:
+                type: boolean
+            required:
+            - ready
             type: object
         type: object
     served: true
