--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -5,11 +5,11 @@ port: 4222
 pid_file: "/var/run/nats/nats.pid"
 
 # Monitoring
-http: 8222
+http_port: 8222
 server_name: "$POD_NAME"
 
-lame_duck_grace_period: 10s
 lame_duck_duration:     30s
+lame_duck_grace_period: 10s
 
 # NATS JetStream
 jetstream {
@@ -18,9 +18,15 @@ jetstream {
     store_dir: "/data"
 }
 
-# tls {
-#     cert_file: "/kubefox/nats/tls.crt"
-#     key_file:  "/kubefox/nats/tls.key"
-#     ca_file:   "/kubefox/ca.crt"
-#     verify:    true
-# }
+tls {
+    cert_file: "/tmp/kubefox/tls.crt"
+    key_file:  "/tmp/kubefox/tls.key"
+    ca_file:   "/tmp/kubefox/ca.crt"
+    verify_and_map: true
+}
+
+authorization {
+    users = [
+        {user: "{{ .Platform.Name }}-broker.{{ .Platform.Namespace }}"}
+    ]
+}
