--- a/components/operator/templates/broker/daemonset.yaml
+++ b/components/operator/templates/broker/daemonset.yaml
@@ -10,24 +10,60 @@ spec:
       labels:
         {{- include "labels" . | nindent 8 }}
     spec:
-      securityContext:
-        runAsNonRoot: true
-      serviceAccountName: {{ componentName }}
+      serviceAccountName: {{ componentFullName }}
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
       {{- with .App.ImagePullSecret }}
       imagePullSecrets:
         - name: {{ . }}
       {{- end }}
+      {{- include "podSecurityContext" . | nindent 6 }}
+      initContainers:
+        - name: pki-init
+          image: {{ .Values.pkiInitImage | quote }}
+          imagePullPolicy: {{ .Component.ImagePullPolicy | default "IfNotPresent" }}
+          {{- include "containerSecurityContext" . | nindent 10 }}
+          command:
+            - /pki-init.sh
+          env:
+            - name: KUBEFOX_HOME
+              value: /tmp/kubefox
+            - name: KUBEFOX_COMPONENT
+              value: {{ .Component.Name }}
+            - name: KUBEFOX_COMPONENT_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+          envFrom:
+            - configMapRef:
+                name: {{ .Platform.Name }}-env
+          volumeMounts:
+            - name: pki-init
+              mountPath: /pki-init.sh
+              subPath: pki-init.sh
+            - name: root-ca
+              mountPath: /tmp/kubefox/ca.crt
+              subPath: ca.crt
+            - name: kubefox
+              mountPath: /tmp/kubefox
       containers:
         - name: {{ .Component.Name }}
           image: {{ .Component.Image | default (printf "%s/%s:%v" .App.Registry .Component.Name .Component.Commit) | quote }}
           imagePullPolicy: {{ .Component.ImagePullPolicy | default "IfNotPresent" }}
+          {{- include "containerSecurityContext" . | nindent 10 }}
           args:
             - -instance={{ .Instance.Name }}
             - -platform={{ .Platform.Name }}
             - -namespace={{ .Platform.Namespace }}
-            - -grpc-addr=$(BROKER_HOST):6060
+            - -grpc-addr=$(KUBEFOX_COMPONENT_IP):6060
             - -vault-addr={{ .Instance.Name }}-vault.{{ .Instance.Namespace }}
             - -nats-addr={{ .Platform.Name }}-nats.{{ .Platform.Namespace }}
             - -http-addr=0.0.0.0:8080
@@ -36,7 +72,7 @@ spec:
             - -log-format=json
             - -log-level=info
           env:
-            - name: BROKER_HOST
+            - name: KUBEFOX_COMPONENT_IP
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
@@ -48,10 +84,9 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            - name: POD_IP
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIP
+          envFrom:
+            - configMapRef:
+                name: {{ .Platform.Name }}-env
           ports:
             - name: grpc
               containerPort: 6060
@@ -70,14 +105,17 @@ spec:
               port: health
           volumeMounts:
             - name: root-ca
-              mountPath: /tmp/kubefox/broker/ca.crt
+              mountPath: /tmp/kubefox/ca.crt
               subPath: ca.crt
-          securityContext:
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop:
-                - "ALL"
+            - name: kubefox
+              mountPath: /tmp/kubefox
       volumes:
         - name: root-ca
           configMap:
             name: {{ .Instance.Name }}-root-ca
+        - name: pki-init
+          configMap:
+            name: {{ .Platform.Name }}-pki-init
+            defaultMode: 0777
+        - name: kubefox
+          emptyDir: {}
