--- a/components/operator/templates/broker/daemonset.yaml
+++ b/components/operator/templates/broker/daemonset.yaml
@@ -56,7 +56,7 @@ spec:
               mountPath: /tmp/kubefox
       containers:
         - name: {{ .Component.Name }}
-          image: {{ .Component.Image | default (printf "%s/%s:%v" .App.Registry .Component.Name .Component.Commit) | quote }}
+          image: {{ .Component.Image | default (printf "%s/%s:%s" .App.Registry .Component.Name .Component.Commit) | quote }}
           imagePullPolicy: {{ .Component.ImagePullPolicy | default "IfNotPresent" }}
           {{- include "containerSecurityContext" . | nindent 10 }}
           args:
