--- a/components/operator/templates/broker/role.yaml
+++ b/components/operator/templates/broker/role.yaml
@@ -11,3 +11,11 @@ rules:
       - list
       - get
       - watch
+  - apiGroups:
+      - apps
+    resources:
+      - daemonsets
+    verbs:
+      - list
+      - get
+      - watch
