created active event and bug fixes, wip

--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -6,14 +6,14 @@ pid_file: "/var/run/nats/nats.pid"
 
 # Monitoring
 http_port: 8222
-server_name: "$POD_NAME"
+server_name: $POD_NAME
 
 lame_duck_duration:     30s
 lame_duck_grace_period: 10s
 
 # NATS JetStream
 jetstream {
-    max_mem:   2Gi
+    max_mem:   0Mi
     max_file:  8Gi
     store_dir: "/data"
 }
