--- a/components/operator/templates/broker/daemonset.yaml
+++ b/components/operator/templates/broker/daemonset.yaml
@@ -72,6 +72,13 @@ spec:
             - -health-addr=0.0.0.0:1111
             - -log-format=console
             - -log-level=debug
+          resources:
+            requests:
+              memory: 115Mi # 90% of limit, used to set GOMEMLIMIT 
+              cpu: 500m
+            limits:
+              memory: 128Mi
+              cpu: 2000m
           env:
             - name: KUBEFOX_COMPONENT_IP
               valueFrom:
@@ -85,6 +92,16 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: GOMEMLIMIT
+              valueFrom:
+                resourceFieldRef:
+                  containerName: {{ .Component.Name }}
+                  resource: requests.memory
+            - name: GOMAXPROCS
+              valueFrom:
+                resourceFieldRef:
+                  containerName: {{ .Component.Name }}
+                  resource: limits.cpu
           envFrom:
             - configMapRef:
                 name: {{ .Platform.Name }}-env
