--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -13,7 +13,7 @@ lame_duck_grace_period: 10s
 
 # NATS JetStream
 jetstream {
-    max_mem:   0Mi
+    max_mem:   0Gi
     max_file:  8Gi
     store_dir: "/data"
 }
