--- a/components/operator/templates/component/deployment.yaml
+++ b/components/operator/templates/component/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - -commit={{ .Component.Commit }}
             - -broker-addr=$(BROKER_HOST):6060
             - -log-format=console
-            - -log-level=warn
+            - -log-level=info
           env:
             - name: BROKER_HOST
               valueFrom:
